<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Werewolf</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="verify_password">Verify Password</string>
    <string name="register">Register</string>
    <string name="title_activity_start_game">StartGame</string>
    <string name="title_activity_user_login">UserLogin</string>
    <string name="login">Login</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="title_activity_player_vote">PlayerVoteActivity</string>
    <string name="title_activity_game_status">GameStatusActivity</string>

</resources>
